--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - checkout
       - aws-cli/setup
       - eb/setup
+      # install dependencies in both apps
       - run:
           name: udgram-frontend install
           command: |
