--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 
 {
     "scripts": {
-        "frontend:install": "cd udgram-frontend && npm install",
-        "backend:install": "cd udgram-api && npm install",
-        "frontend:build": "cd udgram-frontend && npm run build",
-        "backend:build": "cd udgram-api && npm run build",
-        "frontend:deploy": "cd udgram-frontend && npm run deploy",
-        "backend:deploy": "cd udgram-api && npm run deploy"
+        "frontend:install": "cd udagram-frontend && npm install",
+        "backend:install": "cd udagram-api && npm install",
+        "frontend:build": "cd udagram-frontend && npm run build",
+        "backend:build": "cd udagram-api && npm run build",
+        "frontend:deploy": "cd udagram-frontend && npm run deploy",
+        "backend:deploy": "cd udagram-api && npm run deploy"
     },
     "devDependencies": {}
 }
