--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
     docker:
       - image: "cimg/base:stable"
     steps:
-      - node/install: |
-        node-version: '16.13'
+      - node/install:
+          node-version: '16.13'
       - checkout
       - aws-cli/setup
       - eb/setup
