--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,10 @@ jobs:
       - eb/setup
       # install dependencies in both apps
       - run:
+          name: providing environment variables
+          command: |
+            chmod 755 ./bin/setenv.sh && ./bin/setenv.sh
+      - run:
           name: udgram-frontend install
           command: |
             npm run frontend:install
