--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 
 {
     "scripts": {
+        "frontend:test": "cd udagram-frontend && npm run test",
+        "backend:test": "cd udagram-api && npm run test",
         "frontend:install": "cd udagram-frontend && npm install",
         "backend:install": "cd udagram-api && npm install",
         "frontend:build": "cd udagram-frontend && npm run build",
