--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ orbs:
 jobs:
   # different jobs are calles later in the workflows sections
   build:
+    filters:
+      branches:
+        only: master
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
